Updated user and auth endpoints
