# src/interfaces/auth.responses.ts
@@ -4,3 +4,8 @@ export interface SignUpResponse {
   token: string;
   user: User;
 }
+
+export interface LoginResponse {
+  token: string;
+  user: User;
+}
